# pandoc-converter

./: .gitignore  pandoc-composer.cabal  pandoc-converter.cabal  pandoc-converter.nix  readme.org  release.nix  shell.nix  test.md
.github/: CODEOWNERS
.github/workflows/: build.yaml
cdk/: package-lock.json  package.json  tsconfig.json
cdk/lib/: pandoc-converter.test.ts  pandoc-converter.ts
cdk/lib/__snapshots__/: pandoc-converter.test.ts.snap
nix/: sources.json
src/: Composer.hs  Main.hs
