cabal-version:      3.4
name:               PandocComposer
version:            1.0.0
author:             Emily Bourke
maintainer:         emily@emdash.ie
category:           Application
build-type:         Simple

common warnings
    ghc-options: -Wall

executable PandocComposer
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Composer
    -- other-extensions:
    build-depends:
        aeson,
        base,
        bytestring,
        -- cmdargs,
        containers,
        generic-lens,
        lens,
        megaparsec,
        pandoc,
        text,
        transformers,

    hs-source-dirs:   src
    default-language: GHC2021

-- Local Variables:
-- compile-command: "cabal2nix . > pandoc-composer.nix"
-- End:
