cabal-version:      3.4
name:               PandocConverter
version:            1.0.0
author:             Emily Bourke
maintainer:         emily@emdash.ie
category:           Application
build-type:         Simple

common warnings
    ghc-options: -Wall

executable PandocConverter
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Composer
    -- other-extensions:
    build-depends:
        aeson,
        base,
        bytestring,
        -- cmdargs,
        containers,
        generic-lens,
        lens,
        megaparsec,
        pandoc,
        servant-server,
        servant-options,
        text,
        time,
        transformers,
        wai,
        warp,

    hs-source-dirs:   src
    default-language: GHC2021

-- Local Variables:
-- compile-command: "cabal2nix . > pandoc-converter.nix"
-- End:
